MQonCP4I/nativeha-crr-poc/deploy/1-live-template.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ${QMGR_NAME_LOWERCASE}-${CHANNEL}-ibm-mq-qm
  namespace: ${TARGET_NAMESPACE}
spec:
  host: ${CHANNEL}.chl.mq.ibm.com
  to:
    kind: Service
    name: ${QMGR_NAME_LOWERCASE}-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
  wildcardPolicy: None
