MQonCP4I/nativeha-crr-poc/deploy/x-2-recovery.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mq02ha-nativehachl-ibm-mq-qm
  namespace: student2
spec:
  host: nativehachl.chl.mq.ibm.com
  to:
    kind: Service
    name: mq02ha-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
  wildcardPolicy: None
